--- a/public/html/index.html
+++ b/public/html/index.html
@@ -8,10 +8,10 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/index.css">
-    <link rel="stylesheet" href="../css/common.css">
+        <link rel="stylesheet" href="../css/common.css">
 
 
-    <title>Hey there</title>
+    <title>Hey there!</title>
   </head>
   <body>
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -19,20 +19,17 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item active">
-              <a class="nav-link" href="index.html" style="color:white;">Home <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-              <a href="profile.html" class="btn btn-default login" style="color:#3e6145;">Client</a>
-            </li>
-            <li class="nav-item">
-              <a href="profile.html" class="btn btn-default login" style="color:#3e6145;">Site</a>
-            </li>
-            <li class="nav-item">
-              <a target="_blank" href="../img/logo.jpg">
-                <img class="img-thumbnail" src="../img/logo.jpg" alt="logo" style="max-width:15%; float:right"/></div>
+        <ul class="navbar-nav">
+            <!-- <li class="nav-item">
+              <a target="_blank" href="../img/gp_logo.png">
+                <img class="img-thumbnail" src="../img/gp_logo.png" alt="logo" style="max-width:14%;"/></div>
               </a>
+            </li> -->
+            <li class="nav-item active">
+              <a class="nav-link active-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+              <a href="client_info.html" class="btn btn-default" style="color:#cdecd3;">Login</a>
             </li>
           </ul>
         </div>
@@ -40,8 +37,7 @@
 
 <div class="container">
   <div class="homepage">Tell us about your wanderlist and we will plan your travel. Fill your prefernces and we will email you customized trips! Godspeed!</div>
-  <img src="../img/gp.jpg"/ alt="wanderlist homepage image"style="width: 100%;">
-
+  <img src="../img/gp.jpg"/ alt="wanderlist homepage image"style="width: 100%;" />
 </div>
     <!-- jQuery, Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" crossorigin="anonymous"></script>
