Started creating the form

--- a/public/html/client_info.html
+++ b/public/html/client_info.html
@@ -69,6 +69,21 @@
         </tr>
       </tbody>
     </table>
+    <h4 class="travel-header">Additional Notes</h4>
+      <form id="travel-form">
+      <div class="form-group row">
+        <label for="country" class="col-md-3 col-form-label">Select Client</label>
+        <div class="col-md-4">
+          <select class="form-control form-control-sm">
+            <option>1</option>
+            <option>2</option>
+          </select>
+        </div>
+      </div>
+
+
+
+
 
     <!-- jQuery, Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" crossorigin="anonymous"></script>
