--- a/public/html/client_info.html
+++ b/public/html/client_info.html
@@ -80,10 +80,14 @@
           </select>
         </div>
       </div>
-
-
-
-
+      <div class="form-group row">
+    <label for="places" class="col-md-3 col-form-label">Enter additional notes</label>
+    <div class="col-md-4">
+      <textarea class="form-control" rows="5" id="notes"></textarea>
+    </div>
+  </div>
+  <button type="submit" class="btn btn-primary submit-notes-button">Submit</button>
+</form>
 
     <!-- jQuery, Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" crossorigin="anonymous"></script>
