added kpi page, minor css changes

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -31,8 +31,8 @@
   </nav>
 
 <div class="container">
-  <div class="homepage">Tell us about your wanderlist and we will plan your travel. Fill your prefernces and we will email you customized trips! Godspeed!</div>
-  <img src="../img/gp.jpg"/ alt="wanderlist homepage image"style="width: 100%;" />
+  <div class="homepage">A dashboard to measure how Alternative Green Solution's business.</div>
+  <img src="../img/gp.jpg"/ alt="wanderlist homepage image"style="width: 100%;height:700px;" />
 </div>
     <!-- jQuery, Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" crossorigin="anonymous"></script>
@@ -40,10 +40,8 @@
 
 
 <p class="attribution">
-    logo img src: "https://dribbble.com/shots/3471643, by MIlan Pleva, May2,2017"
+   img src: "https://www.kisspng.com/png-wind-power-cartoon-wind-power-generation-cartoon-512250/"
 </p>
-<p class="attribution">
-  wanderlust img src: "https://urbankenyans.com/wanderlust-why-travel/, Urban info, Jan 17,2018"
-</p>
+
   </body>
 </html>
