css minor changes

--- a/public/html/client_info.html
+++ b/public/html/client_info.html
@@ -36,7 +36,7 @@
           </ul>
         </div>
   </nav>
-<h4 class="travel-header">Client Information</h4>
+<h4 class="client-header">Client Information</h4>
   <table class="table table-striped client-table" id="clientTable">
     <thead class="client-header">
       <tr>
@@ -68,8 +68,8 @@
     </tbody>
   </table>
 
-<h4 class="travel-header">Additional Notes</h4>
-  <form id="travel-form">
+<h4 class="client-header">Additional Notes</h4>
+  <form id="client-form">
   <div class="form-group row">
     <label for="country" class="col-md-3 col-form-label">Select Client</label>
     <div class="col-md-4">
