--- a/public/html/kpi.html
+++ b/public/html/kpi.html
@@ -35,7 +35,7 @@
           </ul>
         </div>
   </nav>
-<h4 class="kpi-header" style="">Key Performance Indicator Dashboard</h4>
+<h4 class="kpi-header">Key Performance Indicator Dashboard</h4>
 <p class="text">
   This is a sample just to provide the look and feel of the page. AGS's KPIs will be integrated later upon further clarification from Tommy Edison.
 </p>
