--- a/public/html/site_turbine_info.html
+++ b/public/html/site_turbine_info.html
@@ -35,9 +35,9 @@
           </ul>
         </div>
   </nav>
-<h4 class="travel-header">Site/Turbine Information</h4>
-  <table class="table table-striped travel-table" id="siteTable">
-    <thead class="table-header">
+<h4 class="client-header">Site/Turbine Information</h4>
+  <table class="table table-striped client-table" id="siteTable">
+    <thead class="client-header">
       <tr>
         <th scope="col">Site Name</th>
         <th scope="col">Turbine Name</th>
@@ -66,15 +66,6 @@
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 
-    <script src='../js/tablesort.min.js'></script>
-
-    <!-- Include sort types you need -->
-    <!-- <script src='tablesort.number.js'></script>
-    <script src='tablesort.date.js'></script> -->
-
-    <script>
-      new Tablesort(document.getElementById('travelTable'));
-    </script>
 
   </body>
 </html>
