--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,7 @@
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 
-
+    <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 <p class="attribution">
    img src: "https://www.kisspng.com/png-wind-power-cartoon-wind-power-generation-cartoon-512250/"
 </p>
