--- a/public/client_info.html
+++ b/public/client_info.html
@@ -49,8 +49,7 @@
       </tr>
     </thead>
     <tbody id="agsClient">
-      <div v-for="client in clients">
-        <tr>
+        <tr v-for="client in clients">
         <td>{{client.clientId}}</td>
         <td>{{client.clientName}}</td>
         <td>Hoosier Energy is a generation and transmission cooperative providing wholesale electric wind power and services to 18 member distribution cooperatives in central and southern Indiana and southeastern Illinois. Based in Bloomington, Indiana, Hoosier Energy operates renewable energy power plants and delivers power through nearly 1700 miles of transmission network.</td>
@@ -66,7 +65,6 @@
         <td>Energy Service</td>
         <td>Space for additional notes</td>
       </tr>
-    </div>
     </tbody>
   </table>
 
