--- a/public/client_info.html
+++ b/public/client_info.html
@@ -52,17 +52,9 @@
         <tr v-for="client in clients">
         <td>{{client.clientId}}</td>
         <td>{{client.clientName}}</td>
-        <td>Hoosier Energy is a generation and transmission cooperative providing wholesale electric wind power and services to 18 member distribution cooperatives in central and southern Indiana and southeastern Illinois. Based in Bloomington, Indiana, Hoosier Energy operates renewable energy power plants and delivers power through nearly 1700 miles of transmission network.</td>
-        <td>Bloomington, IN</td>
-        <td>Energy Production</td>
-        <td>Space for additional notes</td>
-      </tr>
-      <tr>
-        <td>2</td>
-        <td>Pacific Tidal Energy</td>
-        <td>Pacfici Tidal Energy makes life better for millions of people every day by providing sustainable tidal energy generation services â€“ affordable, reliable and clean. Pacific Tidal is the largest tidal electric power holding company in the United States, supplying and delivering energy through local utilities to approximately 7.4 million U.S. customers.</td>
-        <td>Charlotte, NC</td>
-        <td>Energy Service</td>
+        <td>{{client.clientDescription}}</td>
+        <td>{{client.headquarters}}</td>
+        <td>{{client.gicsSector}}</td>
         <td>Space for additional notes</td>
       </tr>
     </tbody>
