--- a/public/client_info.html
+++ b/public/client_info.html
@@ -49,9 +49,9 @@
     </thead>
     <tbody id="agsClient">
         <tr>
-        <td v-for="client in clients">client.clientId</td>
-        <td>client.clientName</td>
-        <td>client.clientDescription</td>
+        <td v-for="client in clients">{{client.clientId}}</td>
+        <td>{{client.clientName}}</td>
+        <td>{{client.clientDescription}}</td>
         <td>Bloomington, IN</td>
         <td>Energy Production</td>
         <td>Space for additional notes</td>
