--- a/public/client_info.html
+++ b/public/client_info.html
@@ -48,8 +48,8 @@
       </tr>
     </thead>
     <tbody id="agsClient">
-        <tr>
-        <td v-for="client in clients">{{client.clientId}}</td>
+        <tr v-for="client in clients">
+        <td>{{client.clientId}}</td>
         <td>{{client.clientName}}</td>
         <td>{{client.clientDescription}}</td>
         <td>Bloomington, IN</td>
