--- a/public/site_turbine_info.html
+++ b/public/site_turbine_info.html
@@ -45,8 +45,8 @@
     </thead>
     <tbody id="agsSiteTurbine">
       <tr v-for="siteTurb in sitesTurbs">
-        <td>siteTurb.turbineId</td>
-        <td>siteTurb.siteId</td>
+        <td>{{siteTurb.turbineId}}</td>
+        <td>{{siteTurb.siteId}}</td>
       </tr>
       <!-- <tr>
         <td>Smith Energy Complex</td>
