--- a/public/site_turbine_info.html
+++ b/public/site_turbine_info.html
@@ -13,7 +13,7 @@
 
     <title>Client Details</title>
   </head>
-  <body id="agsSiteTurbine">
+  <body>
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -35,6 +35,7 @@
           </ul>
         </div>
   </nav>
+  <div id="agsSiteTurbine">
 <h4 class="client-header">Site/Turbine Information</h4>
   <table class="table table-striped client-table" id="siteTable">
     <thead class="client-header">
@@ -66,10 +67,9 @@
     </tbody>
   </table>
 
-
-<div>
-
 </div>
+
+
     <!-- jQuery, Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
