turbine info table

--- a/public/site_turbine_info.html
+++ b/public/site_turbine_info.html
@@ -63,6 +63,9 @@
       <tr v-for="turbine in turbines">
         <td>{{turbine.turbineId}}</td>
         <td>{{turbine.turbineName}}</td>
+        <td>{{turbine.turbineDescription}}</td>
+        <td>{{turbine.capacity}}</td>
+        <td>{{turbine.rampUpTime}}</td>
       </tr>
     </tbody>
   </table>
