--- a/public/site_turbine_info.html
+++ b/public/site_turbine_info.html
@@ -94,7 +94,7 @@
           <td>{{site.primaryContact}}</td>
           <td>{{site.capacity}}</td>
           <td>{{site.commercialDate}}</td>
-          <td>{{site.addrLine1}} + '' + {{site.addrLine2}}</td>
+          <td>{{site.addrLine1}} {{site.addrCity}} {{addrState}}, {{addrZip}} {{addrCountry}}</td>
         </tr>
       </tbody>
 
