--- a/public/site_turbine_info.html
+++ b/public/site_turbine_info.html
@@ -94,7 +94,8 @@
           <td>{{site.primaryContact}}</td>
           <td>{{site.capacity}}</td>
           <td>{{site.commercialDate}}</td>
-          <td>{{site.addrLine1}} {{site.addrCity}} {{addrState}}, {{addrZip}} {{addrCountry}}</td>
+          <td>{{site.addrLine1}} {{site.addrCity}}</td>
+          <td>{{site.addrZip}}</td>
         </tr>
       </tbody>
 
