added zip code in table

--- a/public/site_turbine_info.html
+++ b/public/site_turbine_info.html
@@ -83,6 +83,7 @@
           <th scope="col">Capacity</th>
           <th scope="col">commercialDate</th>
           <th scope="col">Address</th>
+          <th scope="col">Zip code</th>
         </tr>
       </thead>
       <tbody>
