--- a/public/site_turbine_info.html
+++ b/public/site_turbine_info.html
@@ -71,7 +71,7 @@
         <td>{{turbine.rampUpTime}}</td>
       </tr>
     </tbody>
-
+</table>
     <table class="table table-striped client-table" id="siteTable" v-show="isSiteDisplay">
       <thead class="client-header">
         <tr>
@@ -99,7 +99,6 @@
           <td>{{site.addrZip}}</td>
         </tr>
       </tbody>
-
   </table>
 
 </div>
