hide logic for site

--- a/public/site_turbine_info.html
+++ b/public/site_turbine_info.html
@@ -100,6 +100,7 @@
           <td>{{site.commercialDate}}</td>
           <td>{{site.addrLine1}} {{site.addrCity}}</td>
           <td>{{site.addrZip}}</td>
+          <td><a href="#" v-on:click="hideSiteDetails()">Hide</a></td>
         </tr>
       </tbody>
   </table>
