client page info

--- a/public/client_info.html
+++ b/public/client_info.html
@@ -44,7 +44,6 @@
         <th scope="col">Description</th>
         <th scope="col">Headquaters</th>
         <th scope="col">GICS</th>
-        <th scope="col">Additional Notes</th>
       </tr>
     </thead>
     <tbody id="agsClient">
@@ -52,18 +51,17 @@
         <td>{{client.clientId}}</td>
         <td>{{client.clientName}}</td>
         <td>{{client.clientDescription}}</td>
-        <td>Bloomington, IN</td>
-        <td>Energy Production</td>
-        <td>Space for additional notes</td>
+        <td>{{client.headquarters}}</td>
+        <td>{{client.gicsSector}}</td>
       </tr>
-      <tr>
+      <!-- <tr>
         <td>2</td>
         <td>Pacific Tidal Energy</td>
         <td>Pacfici Tidal Energy makes life better for millions of people every day by providing sustainable tidal energy generation services â€“ affordable, reliable and clean. Pacific Tidal is the largest tidal electric power holding company in the United States, supplying and delivering energy through local utilities to approximately 7.4 million U.S. customers.</td>
         <td>Charlotte, NC</td>
         <td>Energy Service</td>
         <td>Space for additional notes</td>
-      </tr>
+      </tr> -->
     </div>
     </tbody>
   </table>
