populated client from js

--- a/public/client_info.html
+++ b/public/client_info.html
@@ -44,6 +44,7 @@
         <th scope="col">Description</th>
         <th scope="col">Headquaters</th>
         <th scope="col">GICS</th>
+        <th scope="col">Show Notes</th>
       </tr>
     </thead>
     <tbody id="agsClient">
@@ -53,15 +54,8 @@
         <td>{{client.clientDescription}}</td>
         <td>{{client.headquarters}}</td>
         <td>{{client.gicsSector}}</td>
+        <td><a href="#" v-on:click="showNotes(client.clientId)">Show Notes</a></td>
       </tr>
-      <!-- <tr>
-        <td>2</td>
-        <td>Pacific Tidal Energy</td>
-        <td>Pacfici Tidal Energy makes life better for millions of people every day by providing sustainable tidal energy generation services â€“ affordable, reliable and clean. Pacific Tidal is the largest tidal electric power holding company in the United States, supplying and delivering energy through local utilities to approximately 7.4 million U.S. customers.</td>
-        <td>Charlotte, NC</td>
-        <td>Energy Service</td>
-        <td>Space for additional notes</td>
-      </tr> -->
     </div>
     </tbody>
   </table>
