--- a/public/notes.html
+++ b/public/notes.html
@@ -23,10 +23,10 @@
               <a class="nav-link" href="index.html" style="color:#cdecd3;">Home </a>
             </li>
             <li class="nav-item">
-              <a href="client_info.html" class="btn btn-default active-link" ><span class="sr-only">(current)</span>Client</a>
+              <a href="client_info.html" class="btn btn-default active-link" >Client</a>
             </li>
             <li class="nav-item">
-              <a href="notes.html" class="btn btn-default login" style="color:#cdecd3;">Notes</a>
+              <a href="notes.html" class="btn btn-default login" style="color:#cdecd3;"><span class="sr-only">(current)</span>Notes</a>
             </li>
             <li class="nav-item">
               <a href="site_turbine_info.html" class="btn btn-default login" style="color:#cdecd3;">Site/Turbine</a>
@@ -34,7 +34,6 @@
             <li class="nav-item">
               <a href="kpi.html" class="btn btn-default login" style="color:#cdecd3;">KPI</a>
             </li>
-
           </ul>
         </div>
   </nav>
