--- a/public/notes.html
+++ b/public/notes.html
@@ -23,10 +23,10 @@
               <a class="nav-link" href="index.html" style="color:#cdecd3;">Home </a>
             </li>
             <li class="nav-item">
-              <a href="client_info.html" class="btn btn-default active-link" >Client</a>
+              <a href="client_info.html" class="btn btn-default login" >Client</a>
             </li>
             <li class="nav-item">
-              <a href="notes.html" class="btn btn-default login" style="color:#cdecd3;"><span class="sr-only">(current)</span>Notes</a>
+              <a href="notes.html" class="btn btn-default active-link" style="color:#cdecd3;"><span class="sr-only">(current)</span>Notes</a>
             </li>
             <li class="nav-item">
               <a href="site_turbine_info.html" class="btn btn-default login" style="color:#cdecd3;">Site/Turbine</a>
@@ -37,16 +37,13 @@
           </ul>
         </div>
   </nav>
-<h4 class="client-header">Client Information</h4>
+<h4 class="client-header">Add notes</h4>
   <table class="table table-striped client-table" id="clientTable">
     <thead class="client-header">
       <tr>
         <th scope="col">Id</th>
-        <th scope="col">Name</th>
-        <th scope="col">Description</th>
-        <th scope="col">Headquaters</th>
-        <th scope="col">GICS</th>
-        <th scope="col">Show Notes</th>
+        <th scope="col">Client Id</th>
+        <th scope="col">Notes</th>
       </tr>
     </thead>
     <tbody id="agsClient">
