--- a/public/notes.html
+++ b/public/notes.html
@@ -47,13 +47,10 @@
       </tr>
     </thead>
     <tbody id="agsClient">
-        <tr v-for="client in clients">
-        <td>{{client.clientId}}</td>
-        <td>{{client.clientName}}</td>
-        <td>{{client.clientDescription}}</td>
-        <td>{{client.headquarters}}</td>
-        <td>{{client.gicsSector}}</td>
-        <td><a href="#" v-on:click="showNotes(client.clientId)">Show Notes</a></td>
+        <tr v-for="note in notes">
+        <td>{{note.id}}</td>
+        <td>{{note.clientId}}</td>
+        <td>{{note.note}}</td>
       </tr>
     </div>
     </tbody>
@@ -64,9 +61,8 @@
   <div class="form-group row">
     <label for="country" class="col-md-3 col-form-label">Select Client</label>
     <div class="col-md-4">
-      <select class="form-control form-control-sm">
-        <option>1</option>
-        <option>2</option>
+      <select class="form-control form-control-sm" v-for="client in clients">
+        <option>client.clientId</option>
       </select>
     </div>
   </div>
@@ -84,5 +80,6 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
     <script src="js/client.app.js"></script>
+    <script src="js/notes.app.js"></script>
   </body>
 </html>
