--- a/public/notes.html
+++ b/public/notes.html
@@ -80,6 +80,6 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
     <script src="js/client.app.js"></script>
-    <script src="js/notes.app.js"></script>
+    <script src="js/note.app.js"></script>
   </body>
 </html>
