note php and logic update

--- a/public/notes.html
+++ b/public/notes.html
@@ -62,7 +62,7 @@
   <div class="form-group row">
     <label for="country" class="col-md-3 col-form-label">Select Client</label>
     <div class="col-md-4">
-      <select >
+      <select v-model="noteForm.clientId">
         <option v-for="client in clients" v-bind:value="client.clientId">
           {{client.clientId}}
         </option>
