--- a/public/notes.html
+++ b/public/notes.html
@@ -38,8 +38,8 @@
         </div>
   </nav>
 <h4 class="client-header">Add notes</h4>
-<div id="notes">
-    <table class="table table-striped client-table" id="clientTable">
+<div id="agsNotes">
+    <table class="table table-striped client-table" id="notesTable">
     <thead class="client-header">
       <tr>
         <th scope="col">Id</th>
@@ -83,7 +83,6 @@
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
-    <script src="js/client.app.js"></script>
     <script src="js/note.app.js"></script>
   </body>
 </html>
