--- a/public/client_info.html
+++ b/public/client_info.html
@@ -63,7 +63,7 @@
     </div>
     </tbody>
   </table>
-  <table class="table table-striped client-table" id="notesTable" v-show="showNotes">
+  <table class="table table-striped client-table" id="notesTable" v-show="showTableNotes">
   <thead class="client-header">
     <tr>
       <th scope="col">Id</th>
