--- a/public/kpi.html
+++ b/public/kpi.html
@@ -39,18 +39,21 @@
         </div>
   </nav>
 <h4 class="kpi-header">Key Performance Indicator Dashboard</h4>
-<p class="text">
+<!-- <p class="text">
   This is a sample just to provide the look and feel of the page. AGS's KPIs will be integrated later upon further clarification from Tommy Edison.
-</p>
-    <iframe src = "https://public.tableau.com/profile/poorva.arora#!/vizhome/team_skills_dashboard/Dashboard1" width = "555" height = "200">
-    </iframe>
+</p> -->
+    <!-- <iframe src = "https://public.tableau.com/profile/poorva.arora#!/vizhome/team_skills_dashboard/Dashboard1" width = "555" height = "200">
+    </iframe> -->
+    <div id="effortChart" class="col">
+    </div>
 <div>
 
 </div>
     <!-- jQuery, Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-
+  <script src="https://code.highcharts.com/highcharts.js"></script>
+  <script src="js/kpi.app.js"></script>
 
   </body>
 </html>
