--- a/public/kpi.html
+++ b/public/kpi.html
@@ -44,8 +44,12 @@
 </p> -->
     <!-- <iframe src = "https://public.tableau.com/profile/poorva.arora#!/vizhome/team_skills_dashboard/Dashboard1" width = "555" height = "200">
     </iframe> -->
-    <div id="effortChart" class="col">
+    <div id="agsKPI">
+          <div id="effortChart" class="col">
     </div>
+
+  </div>
+
 <div>
 
 </div>
@@ -53,6 +57,8 @@
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
   <script src="https://code.highcharts.com/highcharts.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+
   <script src="js/kpi.app.js"></script>
 
   </body>
