turbine id logic html

--- a/public/kpi.html
+++ b/public/kpi.html
@@ -39,14 +39,27 @@
         </div>
   </nav>
 <h4 class="kpi-header">Key Performance Indicator Dashboard</h4>
+<h4 class="client-header">Select Turbine</h4>
+<div id="agsKPI">
+  <div class="form-group row">
+    <form id="client-form" @submit.prevent="fetchSensorTimeSeries()" id="newTurbineForm">
+    <label for="country" class="col-md-3 col-form-label">Select Turbine</label>
+    <div class="col-md-4">
+      <select v-model="turbineForm.turbineId" v-on:change="fetchSensorTimeSeries(turbineForm.turbineId)">
+        <option v-for="turbine in turbines" v-bind:value="turbine.turbineId">
+          {{turbine.turbineId}}
+        </option>
+      </select>
+    </div>
+  </form>
+  </div>
+</div>
 <!-- <p class="text">
   This is a sample just to provide the look and feel of the page. AGS's KPIs will be integrated later upon further clarification from Tommy Edison.
 </p> -->
     <!-- <iframe src = "https://public.tableau.com/profile/poorva.arora#!/vizhome/team_skills_dashboard/Dashboard1" width = "555" height = "200">
     </iframe> -->
-    <div id="agsKPI">
-          <div id="effortChart" class="col">
-    </div>
+
 
   </div>
 
