--- a/public/kpi.html
+++ b/public/kpi.html
@@ -42,7 +42,7 @@
 <h4 class="client-header">Select Turbine</h4>
 <div id="agsKPI">
   <div class="form-group row">
-    <form id="client-form" id="newTurbineForm">
+    <form id="client-form" id="turbineForm">
     <label for="country" class="col-md-3 col-form-label">Select Turbine</label>
     <div class="col-md-4">
       <select v-model="turbineForm.turbineId" v-on:change="fetchSensorTimeSeries(turbineForm.turbineId)">
