html and more charts

--- a/public/kpi.html
+++ b/public/kpi.html
@@ -49,7 +49,10 @@
         </option>
       </select>
     </div>
-    <div id="effortChart" class="row">
+    <div id="outputChart" class="row">
+
+    </div>
+    <div id="heartRateChart" class="row">
 
     </div>
 </div>
