changed chart name

--- a/public/kpi.html
+++ b/public/kpi.html
@@ -52,7 +52,7 @@
     <div id="outputChart" class="row">
 
     </div>
-    <div id="heartRateChart" class="row">
+    <div id="heatRateChart" class="row">
 
     </div>
 </div>
