compressor efficiency chart

--- a/public/kpi.html
+++ b/public/kpi.html
@@ -55,6 +55,8 @@
     <div id="heatRateChart" class="row">
 
     </div>
+    <div id="compressorEfficiencyChart" class="row">
+    </div>
 </div>
 </div>
 
