--- a/public/kpi.html
+++ b/public/kpi.html
@@ -57,6 +57,8 @@
     </div>
     <div id="compressorEfficiencyChart" class="row">
     </div>
+    <div id="availabilityChart" class="row">
+    </div>
 </div>
 </div>
 
