--- a/public/kpi.html
+++ b/public/kpi.html
@@ -59,6 +59,8 @@
     </div>
     <div id="availabilityChart" class="row">
     </div>
+    <div id="reliabilityChart" class="row">
+    </div>
 </div>
 </div>
 
