--- a/public/kpi.html
+++ b/public/kpi.html
@@ -61,6 +61,8 @@
     </div>
     <div id="reliabilityChart" class="row">
     </div>
+    <div id="fixedHourChart" class="row">
+    </div>
 </div>
 </div>
 
