var name change

--- a/public/kpi.html
+++ b/public/kpi.html
@@ -61,7 +61,7 @@
     </div>
     <div id="reliabilityChart" class="row">
     </div>
-    <div id="fixedHourChart" class="row">
+    <div id="fixedHoursChart" class="row">
     </div>
 </div>
 </div>
