trips and starts chart

--- a/public/kpi.html
+++ b/public/kpi.html
@@ -63,6 +63,10 @@
     </div>
     <div id="fixedHoursChart" class="row">
     </div>
+    <div id="tripsChart" class="row">
+    </div>
+    <div id="startsChart" class="row">
+    </div>
 </div>
 </div>
 
