--- a/public/kpi.html
+++ b/public/kpi.html
@@ -49,12 +49,10 @@
         </option>
       </select>
     </div>
-    <div id="outputChart" class="row">
-
-    </div>
-    <div id="heatRateChart" class="row">
-
-    </div>
+<div class="row">
+  <div id="outputChart" class="col-md-6"></div>
+  <div id="heatRateChart" class="col-md-6"></div>
+</div>
     <div id="compressorEfficiencyChart" class="row">
     </div>
     <div id="availabilityChart" class="row">
