--- a/public/kpi.html
+++ b/public/kpi.html
@@ -53,18 +53,18 @@
   <div id="outputChart" class="col-md-6"></div>
   <div id="heatRateChart" class="col-md-6"></div>
 </div>
-    <div id="compressorEfficiencyChart" class="row">
-    </div>
-    <div id="availabilityChart" class="row">
-    </div>
-    <div id="reliabilityChart" class="row">
-    </div>
-    <div id="fixedHoursChart" class="row">
-    </div>
-    <div id="tripsChart" class="row">
-    </div>
-    <div id="startsChart" class="row">
-    </div>
+<div class="row">
+  <div id="compressorEfficiencyChart" class="col-md-6"></div>
+  <div id="availabilityChart" class="col-md-6"></div>
+</div>
+<div class="row">
+  <div id="reliabilityChart" class="col-md-6"></div>
+  <div id="fixedHoursChart" class="col-md-6"></div>
+</div>
+<div class="row">
+  <div id="tripsChart" class="col-md-6"></div>
+  <div id="startsChart" class="col-md-6"></div>
+</div>
 </div>
 </div>
 
