--- a/public/kpi.html
+++ b/public/kpi.html
@@ -41,14 +41,18 @@
 <h4 class="kpi-header">Key Performance Indicator Dashboard</h4>
 <h4 class="client-header">Select Turbine</h4>
 <div id="agsKPI">
+<form id="client-form" id="newTurbineHealthForm">
+  <div class="form-group row">
     <label for="country" class="col-md-3 col-form-label">Select Turbine</label>
-    <div class="col-md-4">
+      <div class="col-md-4">
       <select v-model="turbineId" v-on:change="fetchSensorTimeSeries(turbineId)">
         <option v-for="turbine in turbines" v-bind:value="turbine.turbineId">
           {{turbine.turbineId}}
         </option>
       </select>
     </div>
+  </div>
+</form>
 <div class="row">
   <div id="outputChart" class="col-md-6"></div>
   <div id="heatRateChart" class="col-md-6"></div>
