--- a/public/kpi.html
+++ b/public/kpi.html
@@ -39,13 +39,13 @@
           </ul>
         </div>
   </nav>
-<h4 class="kpi-header">Key Performance Indicator Dashboard</h4>
+<h4 class="kpi-header">Turbine Health</h4>
 <h4 class="client-header">Select Turbine</h4>
 <div id="agsKPI">
-<form id="client-form" id="newTurbineHealthForm">
+<form id="turbine-form" id="newTurbineHealthForm">
   <div class="form-group row">
-    <label for="country" class="col-md-3 col-form-label">Select Turbine</label>
-      <div class="col-md-4">
+    <label for="country" class="col-md-2 col-form-label">Select Turbine</label>
+      <div class="col-md-1">
       <select v-model="turbineId" v-on:change="fetchSensorTimeSeries(turbineId)">
         <option v-for="turbine in turbines" v-bind:value="turbine.turbineId">
           {{turbine.turbineId}}
