--- a/public/kpi.html
+++ b/public/kpi.html
@@ -42,7 +42,7 @@
 <h4 class="kpi-header">Turbine Health</h4>
 <h4 class="client-header">Select Turbine</h4>
 <div id="agsKPI">
-<form id="turbine-form" id="newTurbineHealthForm">
+<form class="turbine-form" id="newTurbineHealthForm">
   <div class="form-group row">
     <label for="country" class="col-md-2 col-form-label">Select Turbine</label>
       <div class="col-md-1">
