--- a/public/kpi.html
+++ b/public/kpi.html
@@ -39,7 +39,7 @@
           </ul>
         </div>
   </nav>
-<h4 class="kpi-header">Turbine Health</h4>
+<h4 class="kpi-header">TURBINE HEALTH</h4>
 <h4 class="client-header">Select Turbine</h4>
 <div id="agsKPI">
 <form class="turbine-form" id="newTurbineHealthForm">
