--- a/public/kpi.html
+++ b/public/kpi.html
@@ -52,6 +52,8 @@
         </option>
       </select>
     </div>
+    <div class="form-group row">
+      <label for="country" class="col-md-2 col-form-label">Select Sensor</label>
     <div class="col-md-1">
     <select v-model="sensorDeployedId" v-on:change="fetchSensorTimeSeries(sensorDeployedId)">
       <option v-for="sensorDep in sensorsDeployed" v-bind:value="sensor.sensorDeployedId">
@@ -59,7 +61,7 @@
       </option>
     </select>
   </div>
-  <button v-on:click="fetchSensorTimeSeries(turbineId,sensorId)">Fetch KPI</button>
+  </div>
   </div>
 </form>
 <div class="row">
