--- a/public/kpi.html
+++ b/public/kpi.html
@@ -46,7 +46,7 @@
   <div class="form-group row">
     <label for="country" class="col-md-2 col-form-label">Select Turbine</label>
       <div class="col-md-1">
-      <select v-model="turbineId" v-on:change="fetchSensorTimeSeries(turbineId)">
+      <select v-model="turbineId" v-on:change="fetchSensorsDeployed(turbineId)">
         <option v-for="turbine in turbines" v-bind:value="turbine.turbineId">
           {{turbine.turbineId}}
         </option>
