--- a/public/kpi.html
+++ b/public/kpi.html
@@ -52,16 +52,16 @@
         </option>
       </select>
     </div>
+  </div>
     <div class="form-group row">
-      <label for="country" class="col-md-2 col-form-label">Select Sensor</label>
-    <div class="col-md-1">
-    <select v-model="sensorDeployedId" v-on:change="fetchSensorTimeSeries(sensorDeployedId)">
-      <option v-for="sensorDep in sensorsDeployed" v-bind:value="sensorDep.sensorDeployedId">
-        {{sensorDep.sensorDeployedId}}
-      </option>
-    </select>
-  </div>
-  </div>
+      <label for="country" class="col-md-2 col-form-label">Select Sensor Deployed</label>
+        <div class="col-md-2">
+        <select v-model="sensorDeployedId" v-on:change="fetchSensorTimeSeries(sensorDeployedId)">
+          <option v-for="sensorDep in sensorsDeployed" v-bind:value="sensorDep.sensorDeployedId">
+            {{sensorDep.sensorDeployedId}}
+          </option>
+        </select>
+      </div>
   </div>
 </form>
 <div class="row">
